--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -88,7 +88,7 @@
 .main {
 
 	&__section {
-		background: url('../img/background_image/background_main.png');
+		background-image: url('../img/background_image/background_main.png');
 		background-position: center;
 		background-size: cover;
 		height: calc(100vh - 130px);
