--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -52,7 +52,7 @@
 			margin-right: 80px;
 		}
 		@media(max-width: 35em) {
-			margin-right: 0;
+			margin-right: 0!important;
 			margin: 30px 0;
 		}
 		.button {
