--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -159,3 +159,7 @@ a {
 
 // Подключение стилей отдельных страниц
 @import "home";
+@import "catalog";
+@import "delivery";
+@import "photo";
+@import "product_cart";
