--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -114,6 +114,7 @@
 	}
 
 	&__body-title {
+		text-align: center;
 		@include adaptiveValue("margin-top", 20, 15, $containerWidth,$minWidth, 1);
 		@include adaptiveValue("margin-bottom", 20, 15, $containerWidth,$minWidth, 1);
 	}
