--- a/src/scss/photo.scss
+++ b/src/scss/photo.scss
@@ -21,6 +21,9 @@
 		&__item {
 			display: flex;
 			justify-content: center;
+			picture {
+				width: -webkit-fill-available;
+			}
 		}
 
 		&__item-image {
@@ -29,5 +32,4 @@
 			height: auto;
 		}
 }
-.title {
-}
+
